@@ -327,7 +327,7 @@ sub initialize( $ ) {
 		    TC_SCRIPT => '',
 		    EXPORT => 0,
 		    UNTRACKED => 0,
-		    VERSION => "4.4.4.1",
+		    VERSION => "4.4.4.2",
 		    CAPVERSION => 40402 ,
 		  );
 
