@@ -184,6 +184,14 @@ Shorewall 4.4.4 Patch Release 1
     an error.
 
 ----------------------------------------------------------------------------
+        P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 4 . 2
+----------------------------------------------------------------------------
+
+1)  The Shorewall6-lite shorecap program was including the wrong
+    library. Also, Shorewall6 is determining the availablity of the
+    mangle table before it ensures that ip6tables is installed. 
+
+----------------------------------------------------------------------------
         P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 4 . 1
 ----------------------------------------------------------------------------
 
