@@ -8,6 +8,8 @@ Changes in Shorewall 4.4.4.1
 
 4)  Improve IPv6 address validation and range checking.
 
+5)  Correct Shorewall6 capabilities detection.
+
 Changes in Shorewall 4.4.4
 
 1)  Change STARTUP_LOG and LOG_VERBOSITY in default shorewall6.conf.
